add image to article

--- a/src/app/admin/side-nav/side-nav.component.html
+++ b/src/app/admin/side-nav/side-nav.component.html
@@ -5,7 +5,7 @@
         <div class="left-menu">
             <div class="adjust">
                 <mat-icon>adjust</mat-icon>
-                <a routerLink="article">Articles</a>
+                <a routerLink="articles/article">Articles</a>
             </div>
             <div class="adjust">
                 <mat-icon>adjust</mat-icon>
@@ -45,11 +45,11 @@
         <div class="menu-vertical left-menu">
             <div class="adjust">
                 <mat-icon>adjust</mat-icon>
-                <a routerLink="category">Catégories</a>
+                <a routerLink="articles/category">Catégories</a>
             </div>
             <div class="adjust">
                 <mat-icon>adjust</mat-icon>
-                <a routerLink="tag">Etiquettes</a>
+                <a routerLink="articles/tag">Etiquettes</a>
             </div>
             
         </div>
