--- a/src/app/gabarits/articles/article/article.component.css
+++ b/src/app/gabarits/articles/article/article.component.css
@@ -74,12 +74,18 @@ mat-icon{
     align-items: flex-end;
 }
 
+.article-row{
+    display: flex;
+    align-items: center;
+}
+
 .image {
     display: flex;
 }
 
 .image img{
     width: 99%;
+    height: fit-content;
 }
 
 mat-divider{
