--- a/src/app/gabarits/articles/singl-article/singl-article.component.html
+++ b/src/app/gabarits/articles/singl-article/singl-article.component.html
@@ -1,5 +1,5 @@
 <div  *ngIf="article" style="margin:5%; padding:5; ">
-    <img src="../../../assets/Logo_bleu.png"  width="200px" alt="" style="float: left;">
+    <img src="https://step-s3.s3.amazonaws.com/{{article.image}}"  width="300px" alt="" style="float: left; margin:10px">
     <h1 class="title">{{article.title}}</h1>
     <h3 style="text-align: justify;
     text-justify: inter-word;">{{article.content}}</h3>
