--- a/src/app/admin/side-nav/side-nav.component.html
+++ b/src/app/admin/side-nav/side-nav.component.html
@@ -1,4 +1,7 @@
 <div class="row w-100 body-sideNav">
+    <div class="info top-nav pt-3">
+        hello
+    </div>
     <div class="side-left pt-3">
         <img src="assets/img/logo_white.png" width="150px" alt="" routerLink='accueil'>		
         <h2>COMPONENTS</h2>
@@ -60,7 +63,7 @@
             </div>-->
         </div>
     </div>
-    <div class="content p-2" >
+    <div class="content p-2 " >
         
         <router-outlet></router-outlet>
     </div>
