--- a/src/app/admin/model/model.component.html
+++ b/src/app/admin/model/model.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <div [class.mat-elevation-z5]="models.length > 0" *ngIf="models.length > 0" style="margin:5%; padding:5%">
     <h1>Liste des composants</h1>
     <div class="row">
@@ -15,7 +15,7 @@
         </div>
     </div>
 </div>
-
+-->
 
 
 
@@ -32,20 +32,20 @@
         </select>
     </div>
     
-    <div *ngIf="name_component === 'article'" class="my-2">
+    <div class="my-2">
         <h2>Séléctionner un champ pour le composant</h2>
         <div class="button-icon">
-            <button (click)="generateInput('input','text')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>title</mat-icon> Text</button>
-            <button (click)="generateInput('input','email')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>email</mat-icon> Email</button>
-            <button (click)="generateInput('input','number')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>pin</mat-icon> Number</button>
+            <button (click)="generateInput('input','text')" class="step-info" mat-button [disabled]="isValidate || name_component === ''"><mat-icon>title</mat-icon> Text</button>
+            <button (click)="generateInput('input','email')" class="step-info" mat-button [disabled]="isValidate || name_component === ''"><mat-icon>email</mat-icon> Email</button>
+            <button (click)="generateInput('input','number')" class="step-info" mat-button [disabled]="isValidate || name_component === ''"><mat-icon>pin</mat-icon> Number</button>
         </div>
         <div class="button-icon">
-            <button (click)="generateInput('input','date')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>date_range</mat-icon> Date</button>
-            <button (click)="generateInput('input','file')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>image</mat-icon> Image</button>
-            <button (click)="generateInput('input','boolean')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>radio_button_checked</mat-icon> Booléen</button>
+            <button (click)="generateInput('input','date')" class="step-info" mat-button [disabled]="isValidate || name_component === ''"><mat-icon>date_range</mat-icon> Date</button>
+            <button (click)="generateInput('input','file')" class="step-info" mat-button [disabled]="isValidate || name_component === ''"><mat-icon>image</mat-icon> Image</button>
+            <button (click)="generateInput('input','boolean')" class="step-info" mat-button [disabled]="isValidate || name_component === ''"><mat-icon>radio_button_checked</mat-icon> Booléen</button>
         </div>
         <div class="button-icon">
-            <button (click)="generateInput('textarea','textarea')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>notes</mat-icon>Text Area</button>
+            <button (click)="generateInput('textarea','textarea')" class="step-info" mat-button [disabled]="isValidate || name_component === ''"><mat-icon>notes</mat-icon>Text Area</button>
         </div>
     </div>
 
@@ -53,7 +53,7 @@
     </div>
     <hr>
 
-    <div class="" *ngIf="name_component === 'article'">
+    <div class="" >
         <h2 class="w-100">Ajouter un champ</h2><br>
         <h4 class="w-100">Type du champ: <span class="step-info mb-2">{{field_type}}</span></h4>
         <div class="d-flex w-100 justify-content-between mb-2 align-items-center">
@@ -108,8 +108,7 @@
         <button class="m-1"  mat-raised-button color="accent" (click)="cancel()">Annuler</button>
         <div>
             <button class="m-1" [disabled]="!isValidate" mat-raised-button color="primary" (click)="addAnotherField()">Nouveau champ</button>
-            <button *ngIf="name_component === 'article'" class="m-1 success" [disabled]="!isValidate || fields.length===0"  mat-raised-button (click)="saveModel()">Enregistre</button>
-            <button *ngIf="name_component != 'article'"  class="m-1 success" [disabled]="name_component === ''" mat-raised-button (click)="saveModel()">Enregistre</button>
+            <button  class="m-1 success" [disabled]="!isValidate || fields.length===0"  mat-raised-button (click)="saveModel()">Enregistre</button>
         </div>
     </div>
 </div>
