--- a/src/app/gabarits/articles/singl-article/singl-article.component.css
+++ b/src/app/gabarits/articles/singl-article/singl-article.component.css
@@ -7,6 +7,11 @@ h1,h2{
     font-weight: bolder;
 }
 
+.content{
+    text-align: justify;
+    text-justify: inter-word;
+}
+
 .msg{
     padding: 1%;
     margin: 5%;
@@ -17,3 +22,23 @@ h1,h2{
 }
 
 .msg h3{margin: 0; padding-left: 5px;}
+
+img{
+    width: 33%;
+    float: left; 
+    margin:10px
+}
+
+@media (max-width:1000px){
+    img{
+        width: 50%;
+        margin:10;
+    }
+}
+
+@media (max-width:768px){
+    img{
+        width: 100%;
+        margin:0;
+    }
+}
