--- a/src/app/gabarits/articles/template/template.component.css
+++ b/src/app/gabarits/articles/template/template.component.css
@@ -1,8 +1,8 @@
 .template{
     border: 1px solid black;
-    padding: 25px;
+    /* padding: 25px;
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 20px; */
 }
 
 .template label{
