--- a/src/app/gabarits/articles/template/template.component.html
+++ b/src/app/gabarits/articles/template/template.component.html
@@ -1,89 +1,102 @@
-<div style="margin: 5%;" >
+<div style="margin:5%;">
+
     <h1 class="mb-3">Article (add)</h1>
     <mat-divider class="w-75 my-3"></mat-divider>
     <h2>1 - Choose template</h2>
-    <div class="row mb-5">
-        <div class="col template">
-            <input type="radio" name="template" value="template1" id="template1" [(ngModel)]='template'>
-            <label for="template1">
-                <div class="row">
-                    <div class="col-4 alert-secondary" style="height: 130px;"></div>
-                    <div class="col">
-                        <h2>Title</h2>
-                        <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
-                            le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
-                            Ipsum pour donner un aspect plus moderne au contenu. Mais on 
-                            cherchait trop .. 
-                        </h5>
+
+<div style="margin: 5%;" >
+    <div class="row mb-1">
+        <div class="col-lg-6 col-md-12">
+            <div class="template p-4 mb-1">
+                <input type="radio" name="template" value="template1" id="template1" [(ngModel)]='template'>
+                <label for="template1">
+                    <div class="row">
+                        <div class="col-5 alert-secondary" style="height: 130px;"></div>
+                        <div class="col-7">
+                            <h2>Title</h2>
+                            <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
+                                le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
+                                Ipsum pour donner un aspect plus moderne au contenu. Mais on 
+                                cherchait trop .. 
+                            </h5>
+                        </div>
                     </div>
-                </div>
-            </label>
+                </label>
+            </div>
         </div>
-        <div class="col template">
-            <input type="radio" name="template" value="template2" id="template2" [(ngModel)]='template'>
-            <label for="template2">
-                <div class="row">
-                    <div class="col" >
-                        <h2>Title</h2>
-                        <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
-                            le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
-                            Ipsum pour donner un aspect plus moderne au contenu. Mais on 
-                            cherchait trop .. 
-                        </h5>
+        <div class="col-lg-6 col-md-12 ">
+            <div class="template p-4 mb-1">
+                <input type="radio" name="template" value="template2" id="template2" [(ngModel)]='template'>
+                <label for="template2">
+                    <div class="row">
+                        <div class="col-7" >
+                            <h2>Title</h2>
+                            <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
+                                le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
+                                Ipsum pour donner un aspect plus moderne au contenu. Mais on 
+                                cherchait trop .. 
+                            </h5>
+                        </div>
+                        <div class="col-5 alert-secondary" style="height: 130px;"></div>
                     </div>
-                    <div class="col-4 alert-secondary" style="height: 130px;"></div>
-                </div>
-            </label>
+                </label>
+            </div>
         </div>
     </div>
 
     <div class="row">
-        <div class="col template">
-            <input type="radio" name="template" value="template3" id="template3" [(ngModel)]='template'>
-            <label for="template3">
-                <div class="row">
-                    <div class="col" >
-                        <div class="col alert-secondary mb-2" style="height: 130px;"></div>
-                        <h2>Title</h2>
-                        <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
-                            le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
-                            Ipsum pour donner un aspect plus moderne au contenu. Mais on 
-                            cherchait trop .. 
-                        </h5>
+        <div class="col-lg-4 col-md-12">
+            <div class="template p-4 mb-1">
+                <input type="radio" name="template" value="template3" id="template3" [(ngModel)]='template'>
+                <label for="template3">
+                    <div class="row">
+                        <div class="col" >
+                            <div class="col alert-secondary mb-2" style="height: 130px;"></div>
+                            <h2>Title</h2>
+                            <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
+                                le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
+                                Ipsum pour donner un aspect plus moderne au contenu. Mais on 
+                                cherchait trop .. 
+                            </h5>
+                        </div>
                     </div>
-                </div>
-            </label>
+                </label>
+            </div>
         </div>
-        <div class="col template">
-            <input type="radio" name="template" value="template4" id="template4" [(ngModel)]='template'>
-            <label for="template4">
-                <div class="row">
-                    <div class="col" >
-                        <h2>Title</h2>
-                        <div class="col alert-secondary mb-2" style="height: 130px;"></div>
-                        <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
-                            le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
-                            Ipsum pour donner un aspect plus moderne au contenu. Mais on 
-                            cherchait trop .. 
-                        </h5>
+        <div class="col-lg-4 col-md-12">
+            <div class="template p-4 mb-1">
+                <input type="radio" name="template" value="template4" id="template4" [(ngModel)]='template'>
+                <label for="template4">
+                    <div class="row">
+                        <div class="col" >
+                            <h2>Title</h2>
+                            <div class="col alert-secondary mb-2" style="height: 130px;"></div>
+                            <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
+                                le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
+                                Ipsum pour donner un aspect plus moderne au contenu. Mais on 
+                                cherchait trop .. 
+                            </h5>
+                        </div>
                     </div>
-                </div>
-            </label>
+                </label>
+            </div>
         </div>
-        <div class="col template">
-            <input type="radio" name="template" value="template5" id="template5" [(ngModel)]='template'>
-            <label for="template5" >
-                <div class="row">
-                    <div class="col" >
-                        <h2>Title</h2>
-                        <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
-                            le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
-                            Ipsum pour donner un aspect plus moderne au contenu. Mais on 
-                            cherchait trop .. 
-                        </h5>
+        <div class="col-lg-4 col-md-12">
+            <div class="template p-4 mb-1">
+                <input type="radio" name="template" value="template5" id="template5" [(ngModel)]='template'>
+                <label for="template5" >
+                    <div class="row">
+                        <div class="col" >
+                            <h2>Title</h2>
+                            <h5>Dans certaines agences dans les années 90 circulait un texte appelé 
+                                le “tramway jaune” ou “yellow subway“, sensés remplacer le Lorem 
+                                Ipsum pour donner un aspect plus moderne au contenu. Mais on 
+                                cherchait trop .. 
+                            </h5>
+                        </div>
                     </div>
-                </div>
-            </label>
+                </label>
+            </div>
         </div>
     </div>
     <div class="my-3 text-right">
@@ -94,4 +107,5 @@
              <mat-icon>arrow_forward_ios</mat-icon>
         </button>
     </div>
+</div>
 </div>
