--- a/src/app/admin/side-nav/side-nav.component.html
+++ b/src/app/admin/side-nav/side-nav.component.html
@@ -1,72 +1,53 @@
 <div class="row w-100 body-sideNav">
-    <div class="info top-nav pt-3">
-        hello
-    </div>
-    <div class="side-left pt-3">
-        <img src="assets/img/logo_white.png" width="150px" alt="" routerLink='accueil'>		
-        <h2>COMPONENTS</h2>
-        <div class="left-menu">
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a routerLink="articles/article">Articles</a>
-            </div>
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a>Carousels</a>
-            </div>
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a>Buttons</a>
-            </div>
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a>Cards</a>
-            </div>
+    <!--<div class="info top-nav pt-3"></div>-->
+    
+    <!--<div class="side-left pt-3">
+        <img src="assets/img/logo_white.png" width="150px" alt="" routerLink='accueil'>	-->
 
-        </div>
-        <mat-divider class="my-2"></mat-divider>
-
-        <h2>CUSTOM COMPONENTS</h2>
-        <div class="menu-vertical left-menu">
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a>Géolocalisation map</a>
-            </div>
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a>Another example</a>
-            </div>
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a>Another</a>
-            </div>
-           
-        </div>
-        <mat-divider class="my-2"></mat-divider>
-
-        <h2>METADATA</h2>
-        <div class="menu-vertical left-menu">
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a routerLink="articles/category">Catégories</a>
-            </div>
-            <div class="adjust">
-                <mat-icon>adjust</mat-icon>
-                <a routerLink="articles/tag">Etiquettes</a>
-            </div>
-            
-        </div>
-        <mat-divider class="my-2"></mat-divider>
-        <div class="menu-vertical left-menu">
-            <!--<div class="d-flex align-items-center p-3" *ngFor="let model of modelService.models">
-                <a routerLink={{model.title}}>{{model.title | titlecase}}</a>
-            </div>-->
-        </div>
-    </div>
-    <div class="content p-2 " >
+    <nav class="navbar-ang ">
+        <a routerLink="/">
+            <img src="assets/img/logo_white.png" width="150px" alt="" routerLink='accueil'>
+        </a>	
+        <ul *ngIf="innerWidth < 1000" class="nav-menu-ang pt-5">
+            <li class="nav-item-ang mt-3" *ngFor="let li of mobilMenu">
+                <a  class="nav-link-ang "
+                    style="font-size: 16px;" 
+                    routerLink={{li.link}} 
+                    routerLinkActive={{li.class}} 
+                    (click)="closeMenu()">
+                    {{li.title}}
+                </a>
+                <mat-divider class="bg-light"></mat-divider>
+            </li>
+        </ul>
         
+
+        <ul  class="nav-menu-ang pl-3" *ngFor="let uls of leftMenu">
+            <h2 class="mt-5">{{uls.category}}</h2>
+            <li class="nav-item-ang" *ngFor="let li of uls.ul">
+                <a  class="nav-link-ang "
+                    style="font-size: 16px;" 
+                    routerLink={{li.link}} 
+                    routerLinkActive={{li.class}} 
+                    (click)="closeMenu()">
+                    {{li.title}}
+                </a>
+            </li>
+        </ul>
+
+        <div class="hamburger" (click)="mobileMenu()">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+
+    </nav>
+    
+
+    <div class="content p-2 " >
         <router-outlet></router-outlet>
     </div>
+
     <div class="side-right" >
         <div class="right-menu" *ngFor="let rightMenu of rightMenus">
             <a routerLink="{{rightMenu.link}}"><mat-icon matTooltip="{{rightMenu.title}}">{{rightMenu.icon}}</mat-icon></a>
@@ -79,3 +60,4 @@
         </div>
     </div>
 </div>
+
