--- a/src/app/gabarits/articles/edit-article/edit-article.component.html
+++ b/src/app/gabarits/articles/edit-article/edit-article.component.html
@@ -11,13 +11,21 @@
                         <mat-label>Title</mat-label>
                         <input matInput placeholder="Title" formControlName="title" [(ngModel)]="title" >
                     </mat-form-field>
-
+                    
                     <mat-form-field class="w-100">
                         <mat-label>Content</mat-label >
                         <textarea matInput formControlName="content" rows="5" [(ngModel)]="content"></textarea>
                     </mat-form-field>
-
-                    <mat-form-field class="w-100">
+                    
+                     <!--
+                    <angular-editor 
+                        [config]="config"
+                        formControlName="content" 
+                        [placeholder]="'Enter text here...'" 
+                        [(ngModel)]="content">
+                    </angular-editor>
+                    -->
+                    <mat-form-field class="w-100 mt-3">
                         <mat-label>Choose category (choice multiple)</mat-label>
                         <mat-select multiple formControlName="category" [(ngModel)]="savedCategories">
                           <mat-option *ngFor="let category of categories" value="{{category.name}}">{{category.name}}</mat-option>
