--- a/src/app/gabarits/templates/template1/template1.component.html
+++ b/src/app/gabarits/templates/template1/template1.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-md-7 col-sm-12">
             <h1 class="title">{{article.title | titlecase}}</h1>
-            <h3 class="content">{{article.content}}</h3> 
+            <h3 class="content" [innerHtml]="article.content"></h3> 
         </div>
     </div>
 </div>
